--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,28 @@
 body {
   font-family: "Raleway", sans-serif;
 }
+
+
+
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f100;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #5E865A;
+  border-radius: 100px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #466443;
+}
