--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,8 +12,20 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 6px;
 }
+
+
+.secondary-scroll {
+  overflow-y: scroll;
+}
+
+
+/* width */
+.secondary-scroll::-webkit-scrollbar {
+  width: 4px;
+}
+
 
 /* Track */
 ::-webkit-scrollbar-track {
@@ -22,11 +34,38 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #c2c2c2;
+  background: #9ec5ff;
   border-radius: 100px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #999999;
+  background: #81abeb;
+}
+
+
+
+.notif-icon {
+  position: absolute;
+  right: 5px;
+  bottom: -8px;
+}
+
+
+span.unread-icon {
+  background: #629AEF;
+  width: 7px;
+  height: 7px;
+  left: 7px;
+  top: 7px;
+}
+
+
+.notif-option-dropdown {
+  width: 120px;
+}
+
+.notif-option-icon {
+  margin-left: 10px;
+  margin-right: 5px;
 }
